# serializer version: 1
# name: TestGitHubRuleset.test_RequirePullRequests
  '''
  Processing 1 module...
    Processing 'GitHubRulesets' (1 of 1)...
  
  
  
  
    DONE! ([31;1m-1[0m, <scrubbed duration>)
  DONE! ([31;1m-1[0m, <scrubbed duration>)
  
  
  ╭───────────────────────────────────────────────────────────────────────────────── GitHubRulesets ─────────────────────────────────────────────────────────────────────────────────╮
  │                                                                                                                                                                                  │
  │ Validates GitHub repository rulesets.                                                                                                                                            │
  │                                                                                                                                                                                  │
  │ Successful:     0 (0.00%)                                                                                                                                                        │
  │ Warnings:       0 (0.00%)                                                                                                                                                        │
  │ Errors:         1 (33.33%)                                                                                                                                                       │
  │ Skipped:        2 (66.67%)                                                                                                                                                       │
  │                                                                                                                                                                                  │
  │ [31m╭─[0m[31m [Error] RequirePullRequests [0m[31m───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────[0m[31m─╮[0m │
  │ [31m│[0m                                                                                                                                                                              [31m│[0m │
  │ [31m│[0m Validates that 'pull_request' is set to the expected value.                                                                                                                  [31m│[0m │
  │ [31m│[0m                                                                                                                                                                              [31m│[0m │
  │ [31m│[0m ERROR: No active branch ruleset requiring Pull Requests found                                                                                                                [31m│[0m │
  │ [31m│[0m                                                                                                                                                                              [31m│[0m │
  │ [31m│[0m Resolution                                                                                                                                                                   [31m│[0m │
  │ [31m│[0m ----------                                                                                                                                                                   [31m│[0m │
  │ [31m│[0m   Enable pull request requirements in repository rulesets                                                                                                                    [31m│[0m │
  │ [31m│[0m                                                                                                                                                                              [31m│[0m │
  │ [31m│[0m Rationale                                                                                                                                                                    [31m│[0m │
  │ [31m│[0m ---------                                                                                                                                                                    [31m│[0m │
  │ [31m│[0m   Pull request reviews help maintain code quality and collaboration                                                                                                          [31m│[0m │
  │ [31m│[0m                                                                                                                                                                              [31m│[0m │
  │ [31m╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯[0m │
  │                                                                                                                                                                                  │
  ╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
  
  Results: DONE! ([31;1m-1[0m, <scrubbed duration>)
  
  
  '''
# ---
# name: TestGitHubRuleset.test_RequireSignedCommits
  '''
  Processing 1 module...
    Processing 'GitHubRulesets' (1 of 1)...
  
  
  
  
    DONE! ([31;1m-1[0m, <scrubbed duration>)
  DONE! ([31;1m-1[0m, <scrubbed duration>)
  
  
  ╭───────────────────────────────────────────────────────────────────────────────── GitHubRulesets ─────────────────────────────────────────────────────────────────────────────────╮
  │                                                                                                                                                                                  │
  │ Validates GitHub repository rulesets.                                                                                                                                            │
  │                                                                                                                                                                                  │
  │ Successful:     0 (0.00%)                                                                                                                                                        │
  │ Warnings:       0 (0.00%)                                                                                                                                                        │
  │ Errors:         1 (33.33%)                                                                                                                                                       │
  │ Skipped:        2 (66.67%)                                                                                                                                                       │
  │                                                                                                                                                                                  │
  │ [31m╭─[0m[31m [Error] RequireSignedCommits [0m[31m──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────[0m[31m─╮[0m │
  │ [31m│[0m                                                                                                                                                                              [31m│[0m │
  │ [31m│[0m Validates that 'required_signatures' is set to the expected value.                                                                                                           [31m│[0m │
  │ [31m│[0m                                                                                                                                                                              [31m│[0m │
  │ [31m│[0m ERROR: No active branch ruleset requiring Signed Commits found                                                                                                               [31m│[0m │
  │ [31m│[0m                                                                                                                                                                              [31m│[0m │
  │ [31m│[0m Resolution                                                                                                                                                                   [31m│[0m │
  │ [31m│[0m ----------                                                                                                                                                                   [31m│[0m │
  │ [31m│[0m   Enable commit signing requirement in repository rulesets                                                                                                                   [31m│[0m │
  │ [31m│[0m                                                                                                                                                                              [31m│[0m │
  │ [31m│[0m Rationale                                                                                                                                                                    [31m│[0m │
  │ [31m│[0m ---------                                                                                                                                                                    [31m│[0m │
  │ [31m│[0m   Signed commits ensure commit authenticity                                                                                                                                  [31m│[0m │
  │ [31m│[0m                                                                                                                                                                              [31m│[0m │
  │ [31m╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯[0m │
  │                                                                                                                                                                                  │
  ╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
  
  Results: DONE! ([31;1m-1[0m, <scrubbed duration>)
  
  
  '''
# ---
# name: TestGitHubRuleset.test_RequireStatusChecks
  '''
  Processing 1 module...
    Processing 'GitHubRulesets' (1 of 1)...
  
  
  
  
    DONE! ([31;1m-1[0m, <scrubbed duration>)
  DONE! ([31;1m-1[0m, <scrubbed duration>)
  
  
  ╭───────────────────────────────────────────────────────────────────────────────── GitHubRulesets ─────────────────────────────────────────────────────────────────────────────────╮
  │                                                                                                                                                                                  │
  │ Validates GitHub repository rulesets.                                                                                                                                            │
  │                                                                                                                                                                                  │
  │ Successful:     0 (0.00%)                                                                                                                                                        │
  │ Warnings:       0 (0.00%)                                                                                                                                                        │
  │ Errors:         1 (33.33%)                                                                                                                                                       │
  │ Skipped:        2 (66.67%)                                                                                                                                                       │
  │                                                                                                                                                                                  │
  │ [31m╭─[0m[31m [Error] RequireStatusChecks [0m[31m───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────[0m[31m─╮[0m │
  │ [31m│[0m                                                                                                                                                                              [31m│[0m │
  │ [31m│[0m Validates that 'required_status_checks' is set to the expected value.                                                                                                        [31m│[0m │
  │ [31m│[0m                                                                                                                                                                              [31m│[0m │
  │ [31m│[0m ERROR: No active branch ruleset requiring Status Checks found                                                                                                                [31m│[0m │
  │ [31m│[0m                                                                                                                                                                              [31m│[0m │
  │ [31m│[0m Resolution                                                                                                                                                                   [31m│[0m │
  │ [31m│[0m ----------                                                                                                                                                                   [31m│[0m │
  │ [31m│[0m   Configure required status checks in repository rulesets                                                                                                                    [31m│[0m │
  │ [31m│[0m                                                                                                                                                                              [31m│[0m │
  │ [31m│[0m Rationale                                                                                                                                                                    [31m│[0m │
  │ [31m│[0m ---------                                                                                                                                                                    [31m│[0m │
  │ [31m│[0m   Status checks ensure code quality and compatibility                                                                                                                        [31m│[0m │
  │ [31m│[0m                                                                                                                                                                              [31m│[0m │
  │ [31m╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯[0m │
  │                                                                                                                                                                                  │
  ╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
  
  Results: DONE! ([31;1m-1[0m, <scrubbed duration>)
  
  
  '''
# ---
